--- a/Projects/CommunDeliver_Project/CommunDeliver/deliver/templates/post_availability.html
+++ b/Projects/CommunDeliver_Project/CommunDeliver/deliver/templates/post_availability.html
@@ -18,7 +18,7 @@
           <!-- <script async
           src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjGZMcRaqX3WFFTX9fTCjfnrgRrVAsg3A&loading=async&libraries=places&callback=initMap">
       </script> -->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxuWkiItG0F0A7rmQ_Tn8Umgvsl3SozMM&libraries=places"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=SDGGDeukjaknk&libraries=places"></script>
 
      <script>
         // Initialize Google Maps Places Autocomplete for start location
