--- a/Projects/CommunDeliver_Project/CommunDeliver/deliver/templates/add_request.html
+++ b/Projects/CommunDeliver_Project/CommunDeliver/deliver/templates/add_request.html
@@ -15,7 +15,7 @@
           <!-- <script async
           src="https://maps.googleapis.com/maps/api/js?key=&loading=async&libraries=places&callback=initMap">
       </script> -->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxuWkiItG0F0A7rmQ_Tn8Umgvsl3SozMM&libraries=places"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=SDGGDeukjaknk&libraries=places"></script>
       <script>
         // Initialize Google Maps Places Autocomplete for start location
         function initStartAutocomplete() {
